<resources>
    <string name="app_name">BinDecHexRom clock</string>
    <string name="title_binary">Binary</string>
    <string name="title_decimal">Decimal</string>
    <string name="title_hex">Hex</string>
    <string name="title_romans">Roman</string>
    <string name="title_stopwatch">Stopwatch</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="time_in">Time in</string>

    <!-- Stopwatch/Timer Hybrid Feature Strings -->
    <string name="timer_mode_button">Timer</string>
    <string name="stopwatch_mode_button">Stopwatch</string>
    <string name="action_bar_title_timer">Timer</string>
    <string name="plus_30_seconds">+ 30 s</string>
    <string name="minus_30_seconds">- 30 s</string>
</resources>