<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stopwatch.StopwatchFragment">

    <LinearLayout
        android:id="@+id/top_button_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/button_plus_30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus_30_seconds"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginHorizontal="4dp"/>

        <Button
            android:id="@+id/button_minus_30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus_30_seconds"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginHorizontal="4dp"/>

        <Button
            android:id="@+id/button_mode_toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timer_mode_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginHorizontal="4dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_stopwatch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintTop_toBottomOf="@id/top_button_panel"
        app:layout_constraintBottom_toTopOf="@+id/buttonStartStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonStartStop"
        android:title="@string/start"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/buttonReset"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/buttonReset"
        android:title="@string/reset"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonStartStop"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>